Added AngularJS certificate

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="udemy__certificates">
-            <img class="udemy__certificate udemy__certificate-1" src="Build Responsive Real World Websites with HTML5 and CSS3/Build Responsive Real World Websites with HTML5 and CSS3.jpg" alt="">
-            <img class="udemy__certificate udemy__certificate-2" src="Advanced CSS & Sass - Flexbox, Grid, Animations and More!/Advanced CSS & Sass - Flexbox, Grid, Animations and More!.jpg" alt="">
-            <img class="udemy__certificate udemy__certificate-3" src="The Complete Javascript Course - Build a Real-World Project/The Complete Javascript Course - Build a Real-World Project.jpg" alt="">
-            <img class="udemy__certificate udemy__certificate-6" src="Javascript - Understanding The Weird Parts/Javascript - Understanding The Weird Parts.jpg" alt="">
-            <img class="udemy__certificate udemy__certificate-4" src="Git a Web Developer Job - Mastering The Modern Workflow/Git a Web Developer Job - Mastering The Modern Workflow.jpg" alt="">
-            <img class="udemy__certificate udemy__certificate-5" src="Become a Wordpress Developer - Unlocking Power With Code/Become a Wordpress Developer - Unlocking Power With Code.jpg" alt="">       
+            <img class="udemy__certificate udemy__certificate-1" src="Build Responsive Real World Websites with HTML5 and CSS3/Build Responsive Real World Websites with HTML5 and CSS3.jpg" alt="Build Responsive Real World Websites with HTML5 and CSS3">
+            <img class="udemy__certificate udemy__certificate-2" src="Advanced CSS & Sass - Flexbox, Grid, Animations and More!/Advanced CSS & Sass - Flexbox, Grid, Animations and More!.jpg" alt="Advanced CSS & Sass - Flexbox, Grid, Animations and More!">
+            <img class="udemy__certificate udemy__certificate-3" src="The Complete Javascript Course - Build Real Projects!/The Complete Javascript Course - Build Real Projects!.jpg" alt="The Complete Javascript Course - Build Real Projects!">
+            <img class="udemy__certificate udemy__certificate-6" src="Javascript - Understanding The Weird Parts/Javascript - Understanding The Weird Parts.jpg" alt="Javascript - Understanding The Weird Parts">
+            <img class="udemy__certificate udemy__certificate-6" src="Learn and Understand AngularJS/Learn and Understand AngularJS.jpg" alt="Learn and Understand AngularJS">
+            <img class="udemy__certificate udemy__certificate-4" src="Git a Web Developer Job - Mastering The Modern Workflow/Git a Web Developer Job - Mastering The Modern Workflow.jpg" alt="Git a Web Developer Job - Mastering The Modern Workflow">
+            <img class="udemy__certificate udemy__certificate-5" src="Become a Wordpress Developer - Unlocking Power With Code/Become a Wordpress Developer - Unlocking Power With Code.jpg" alt="Become a Wordpress Developer - Unlocking Power With Code">       
         </div>
     </body>
 </html>
